flag-service-main/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flag-deployment
  namespace: flag
  labels:
    app: flag
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flag
  template:
    metadata:
      labels:
        app: flag
    spec:
      containers:
        - name: flag-container
          image: 047719652987.dkr.ecr.us-east-1.amazonaws.com/tc-prod-ecr-flag:bbf826f4
          resources:
            requests:
              memory: "64Mi"
              cpu: "20m"
            limits:
              memory: "128Mi"
              cpu: "40m"
          ports:
            - containerPort: 8002
          livenessProbe:
            httpGet:
              path: /health
              port: 8002
            initialDelaySeconds: 10
            periodSeconds: 10
